--- a/home/components/layout.module.scss
+++ b/home/components/layout.module.scss
@@ -4,7 +4,7 @@
   width: 90%;
   max-width: $max-width;
   margin: 0 auto;
-  padding-bottom: 4em;
+  padding-bottom: 2em;
   overflow: hidden;
 
   & p {
@@ -20,6 +20,7 @@
     height: 0;
     border-bottom: 2em solid transparent;
     border-left: 100vw solid transparent;
+    margin-bottom: 2em;
   }
 }
 
